--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 ./venv
+__pycache__
+.idea
+Comunication/__pycache__
+Controle/__pycache__
+Modelo/__pycache__
+src/__pycache__
+src/common/__pycache__
+src/connection/__pycache__
+src/models/__pycache__
+src/repository/__pycache__
+src/schema/__pycache__
+src/services/__pycache__
