Criação do makefile e correção de bugs

--- a/Cliente/Makefile
+++ b/Cliente/Makefile
@@ -1,22 +1,10 @@
-ifeq ($(OS), Windows_NT)
 run:
-	python Main.py
-
-install:
-	pip install -r requirements.txt
-
-build:
-	python setup.py build bdist_wheel
-
-else
-run:
-	python3 Main.py
+	venv/bin/python3 Main.py
 
 install:
 	sudo apt-get install python3-tk
-	pip3 install -r requirements.txt
+	venv/bin/pip3 install -r requirements.txt
 
-build:
-	python3 setup.py build bdist_wheel
-
-endif
+venv:
+	sudo apt-get install python3.8-venv
+	python3 -m venv venv
